log
Sat 30 Mar 2024 02:02:37 AM UTC: 
 list.c | 41 +++++++++++++++++++++++++++++------------
 1 file changed, 29 insertions(+), 12 deletions(-)
 tests:  0|0
2d3c9fa
Sat 30 Mar 2024 02:08:43 AM UTC: 
 list.c | 18 ++++--------------
 1 file changed, 4 insertions(+), 14 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:61:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   61 |   return NULL;
      |          ^~~~
list.c:60:6: note: declared here
   60 | void pushFront(List *list, void *data) {
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
78be2dc
Sat 30 Mar 2024 02:08:57 AM UTC: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
d3f15ba
Sat 30 Mar 2024 02:13:12 AM UTC: 
 list.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  1|5
total_score: 10/70
107fa88
Sat 30 Mar 2024 02:17:33 AM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
3582149
Sat 30 Mar 2024 02:21:10 AM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|5
total_score: 15/70
7c2d129
Sat 30 Mar 2024 02:21:54 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1dc3479
